--- a/package.json
+++ b/package.json
@@ -10,19 +10,12 @@
   "main": "dist/style.css",
   "scripts": {
     "postinstall": "gulp build-prism",
-    "start": "node build/dev-server.js",
-    "build": "node build/build.js && npm run build-style",
-    "build-style": "webpack --config build/webpack.style.conf.js",
-    "lint": "eslint --ext .js,.vue src server",
-    "unit": "jest --config test/unit/jest.conf.js --runInBand",
-    "unit-with-coverage": "jest --config test/unit/jest.conf.js --runInBand --coverage",
-    "test": "npm run lint && npm run unit",
+    "build": "webpack --config build/webpack.style.conf.js",
     "preversion": "npm run test",
     "postversion": "git push origin master --tags && npm publish",
     "patch": "npm version patch -m \"Tag v%s\"",
     "minor": "npm version minor -m \"Tag v%s\"",
-    "major": "npm version major -m \"Tag v%s\"",
-    "chart": "mkdir -p dist && rm -rf dist/stackedit && cp -r chart dist/stackedit && sed -i.bak -e s/STACKEDIT_VERSION/$npm_package_version/g dist/stackedit/*.yaml && rm dist/stackedit/*.yaml.bak"
+    "major": "npm version major -m \"Tag v%s\""
   },
   "dependencies": {
     "@vue/test-utils": "^1.0.0-beta.16",
@@ -40,17 +33,7 @@
     "indexeddbshim": "^3.6.2",
     "js-yaml": "^3.11.0",
     "katex": "^0.13.0",
-    "markdown-it": "^8.4.1",
     "markdown-it-abbr": "^1.0.4",
-    "markdown-it-deflist": "^2.0.2",
-    "markdown-it-emoji": "^1.3.0",
-    "markdown-it-footnote": "^3.0.1",
-    "markdown-it-imsize": "^2.0.1",
-    "markdown-it-mark": "^2.0.0",
-    "markdown-it-pandoc-renderer": "1.2.0",
-    "markdown-it-sub": "^1.0.0",
-    "markdown-it-sup": "^1.0.0",
-    "mermaid": "^8.9.2",
     "mousetrap": "^1.6.1",
     "normalize-scss": "^7.0.1",
     "prismjs": "^1.6.0",
