--- a/package.json
+++ b/package.json
@@ -2,78 +2,81 @@
   "name": "stackedit",
   "version": "5.15.4",
   "description": "Free, open-source, full-featured Markdown editor",
-  "author": "Benoit Schweblin",
-  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/benweet/stackedit/issues"
   },
+  "license": "Apache-2.0",
+  "author": "Benoit Schweblin",
   "main": "dist/style.css",
   "scripts": {
-    "postinstall": "gulp build-prism",
     "build": "webpack --config build/webpack.style.conf.js",
-    "preversion": "npm run test",
-    "postversion": "git push origin master --tags && npm publish",
-    "patch": "npm version patch -m \"Tag v%s\"",
+    "postinstall": "gulp build-prism",
+    "major": "npm version major -m \"Tag v%s\"",
     "minor": "npm version minor -m \"Tag v%s\"",
-    "major": "npm version major -m \"Tag v%s\""
+    "patch": "npm version patch -m \"Tag v%s\"",
+    "preversion": "npm run test",
+    "postversion": "git push origin master --tags && npm publish"
   },
-  "dependencies": {
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 10"
+  ],
+  "devDependencies": {
     "abcjs": "^5.2.0",
+    "autoprefixer": "^6.7.2",
     "babel-runtime": "^6.26.0",
     "bezier-easing": "^1.1.0",
     "body-parser": "^1.18.2",
+    "chalk": "^1.1.3",
     "clipboard": "^1.7.1",
     "compression": "^1.7.0",
-    "diff-match-patch": "^1.0.0",
-    "file-saver": "^1.3.8",
-    "google-id-token-verifier": "^0.2.3",
-    "handlebars": "^4.0.10",
-    "indexeddbshim": "^3.6.2",
-    "js-yaml": "^3.11.0",
-    "katex": "^0.13.0",
-    "mousetrap": "^1.6.1",
-    "normalize-scss": "^7.0.1",
-    "prismjs": "^1.6.0",
-    "request": "^2.85.0",
-    "serve-static": "^1.13.2",
-    "tmp": "^0.0.33",
-    "turndown": "^4.0.2"
-  },
-  "devDependencies": {
-    "autoprefixer": "^6.7.2",
-    "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
+    "diff-match-patch": "^1.0.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^2.0.0",
     "favicons-webpack-plugin": "^0.0.9",
     "file-loader": "^1.1.11",
+    "file-saver": "^1.3.8",
     "friendly-errors-webpack-plugin": "^1.7.0",
+    "google-id-token-verifier": "^0.2.3",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
+    "handlebars": "^4.0.10",
     "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.18.0",
     "identity-obj-proxy": "^3.0.0",
     "ignore-loader": "^0.1.2",
+    "indexeddbshim": "^3.6.2",
+    "js-yaml": "^3.11.0",
+    "katex": "^0.13.0",
+    "mousetrap": "^1.6.1",
     "node-sass": "^4.0.0",
+    "normalize-scss": "^7.0.1",
     "npm-bump": "^0.0.23",
     "offline-plugin": "^5.0.3",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.2",
     "ora": "^1.2.0",
+    "prismjs": "^1.6.0",
     "raw-loader": "^0.5.1",
     "replace-in-file": "^4.1.0",
+    "request": "^2.85.0",
     "rimraf": "^2.6.0",
     "sass-loader": "^7.0.1",
     "semver": "^5.5.0",
+    "serve-static": "^1.13.2",
     "shelljs": "^0.8.1",
     "string-replace-loader": "^2.1.1",
     "stylelint": "^9.2.0",
     "stylelint-config-standard": "^16.0.0",
     "stylelint-processor-html": "^1.0.0",
     "stylelint-webpack-plugin": "^0.10.4",
+    "tmp": "^0.0.33",
+    "turndown": "^4.0.2",
     "url-loader": "^1.0.1",
     "vue-style-loader": "^4.1.0",
     "webpack": "^2.6.1",
@@ -87,10 +90,5 @@
   "engines": {
     "node": ">= 8.0.0",
     "npm": ">= 5.0.0"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 10"
-  ]
+  }
 }
