--- a/package.json
+++ b/package.json
@@ -22,20 +22,14 @@
     "not ie <= 10"
   ],
   "devDependencies": {
-    "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^2.0.0",
-    "favicons-webpack-plugin": "^0.0.9",
     "file-loader": "^1.1.11",
-    "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-webpack-plugin": "^3.2.0",
-    "ignore-loader": "^0.1.2",
     "katex": "^0.13.0",
     "node-sass": "^4.0.0",
     "normalize-scss": "^7.0.1",
     "npm-bump": "^0.0.23",
     "optimize-css-assets-webpack-plugin": "^1.3.2",
-    "raw-loader": "^0.5.1",
     "sass-loader": "^7.0.1",
     "string-replace-loader": "^2.1.1",
     "stylelint": "^9.2.0",
@@ -44,12 +38,7 @@
     "stylelint-webpack-plugin": "^0.10.4",
     "vue-style-loader": "^4.1.0",
     "webpack": "^2.6.1",
-    "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-dev-middleware": "^1.10.0",
-    "webpack-hot-middleware": "^2.18.0",
-    "webpack-merge": "^4.1.2",
-    "webpack-pwa-manifest": "^3.7.1",
-    "worker-loader": "^1.1.1"
+    "webpack-merge": "^4.1.2"
   },
   "engines": {
     "node": ">= 8.0.0",
